--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,9 @@ envlist = py38
 [testenv]
 deps = pytest
 commands = pytest
+
+[testenv:docs]
+description = Build sphinx documentation
+changedir = docs
+extras = docs
+commands = sphinx-build -b html --color -d {envtmpdir}/doctrees . _build/html
